adding new stuff n' upgrading other stuff

--- a/Projeto OcarinaOfTime/index.html
+++ b/Projeto OcarinaOfTime/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ocarina Simulator</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Ocarina-Simulator</title>
+    <link rel="website icon" type="png"
+     src="Ocarina.gif">
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <p>Ocarina </p>
     <div id="imagem">
         <img id="ocarina" src="Ocarina.gif" alt="">
     </div>
-
     <div class="keys">
         <div data-key="keyq" class="key">Q</div>
         <div data-key="keyw" class="key">W</div>
@@ -24,15 +25,12 @@
         <input type="text" id="input" placeholder="Composition..." />
         <button>Tocar</button>
     </div>
-
-    <footer>© Dereck Luiz dos Santos.</footer>
-
+    <footer>© Dereck Luiz.</footer>
     <audio id="s_keyq" src="sounds/Short_Notes_Ocarina_D (L).wav"></audio>
     <audio id="s_keyw" src="sounds/Short_Notes_Ocarina_F (R).wav"></audio>
     <audio id="s_keye" src="sounds/Short_Notes_Ocarina_A (Y).wav"></audio>
     <audio id="s_keya" src="sounds/Short_Notes_Ocarina_B (X).wav"></audio>
     <audio id="s_keys" src="sounds/Short_Notes_Ocarina_D2 (A).wav"></audio>
-    
     <script src="script.js"></script>
 </body>
 </html>
