--- a/Projeto OcarinaOfTime/index.html
+++ b/Projeto OcarinaOfTime/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ocarina Simulator</title>
-    <link rel="icon" type="image/x-icon" href="Navi(1).png">
+    <link rel="icon" type="image/x-icon" href="Navi.png">
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
