--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <p id="title"> Ocarina Simulator</p>
+    <header>
+        <nav>
+            <img src="./Navi(1).png" href="Navi(1).png"
+                alt="logo">
+            </img>
+            <h1>Ocarina Simulator</h1>
+            <span></span>
+        </nav>
+    </header>
+    <!-- <p id="title"> Ocarina Simulator</p> -->
     <div class="imagem">
         <img id="ocarina" src="Ocarina.gif" alt="">
     </div>
